Show more button too high for on hover pane - fixed.

--- a/App/PluginWeb/EzBob.Web/Content/css/app.css
+++ b/App/PluginWeb/EzBob.Web/Content/css/app.css
@@ -1346,7 +1346,7 @@ td.account-logo {
 
 .marketplace-button a {
 	box-sizing: border-box;
-	height: 60px;
+	height: 60px !important;
 	width: 100%;
 	display: table-cell;
 	text-align: center;
